--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -61,6 +61,10 @@
 /* ------------------------------------------------------ */
 * { box-sizing: border-box; }
 
+:focus {
+    outline: 2  px solid var(--clr-text-high-contrast);
+}
+
 body,
 h1, h2, h3,
 p,
@@ -74,10 +78,13 @@ button { margin: 0; }
 
 body {
     position: relative;
+    display: grid;
+    align-content: center;
+    min-height: 100vh;
     font-family: 'Inter', sans-serif;
     font-weight: var(--fw-bold);
     line-height: 1.2;
-    padding: 2.25rem clamp(1.5rem, 6.5vw, 5.5rem);
+    padding: 2.25rem clamp(1.5rem, 6.5vw, 5.5rem) 2rem;
     color: var(--clr-text);
     background: var(--clr-body-bg-main);
 
@@ -88,13 +95,14 @@ body {
         top: 0;
         left: 0;
         width: 100%;
-        height: 15.25rem;
+        height: 30.5vh;
         border-radius: 0 0 var(--br-bg) var(--br-bg);
         background: var(--clr-body-bg-top);
     }
 }
 
 .main {
+    width: 100%;
     max-width: 47rem;
     margin: auto;
 
