--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -59,9 +59,7 @@
 /* ------------------------------------------------------ */
 /*                Resets and Global Styles                */
 /* ------------------------------------------------------ */
-* { 
-    box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 :focus { outline: 2px solid var(--clr-text-high-contrast); }
 
